<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中国赏月名山珏山</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_list">HomeListActivity</string>
    <string name="title_activity_home_news">HomeNewsActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_detail_gallery">DetailGalleryActivity</string>
    <string name="comment_default_from">未知IP用户</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="back">返回</string>
    <string name="offline_downloading">正在加载离线数据。。。</string>
    <string name="offline_complete">加载完成</string>
    <string name="db_name">database.db</string>
    <string name="loading">正在加载</string>
    <string name="default_user">默认用户</string>
    <string name="reutrn_203">用户微信号已经关注运营商服务号，不能重复关注</string>
    <string name="review_min_length">回复格式1－100个字符</string>
    <string name="email_format">邮件格式不正确</string>
    <string name="input_not_same">两次输入不一致</string>
    <string name="pass_format">请输入6-10位密码</string>
    <string name="no_comment">点击抢沙发</string>
    <string name="channel_setting">频道管理</string>
    <string name="setting">设置</string>
    <string name="bookmark_my">我的收藏</string>
    <string name="bookmark">已添加到我的收藏</string>
    <string name="bookmark_del">已从收藏删除</string>
    <string name="login_exit">退出登陆</string>
    <string name="login_register_title">登录/注册</string>
    <string name="login_title">一键登录</string>
    <string name="login_information">账号信息</string>
    <string name="login_first">点击登陆</string>
    <string name="login_ready">已登陆</string>
    <string name="login_fast">合作账号快速登陆		> </string>
    <string name="login">登陆</string>
    <string name="register">立即注册		></string>
    <string name="register_btn">注	册</string>
    <string name="no_account">没有账号？</string>
    <string name="password">密码</string>
    <string name="password_retype">重复密码</string>
    <string name="phone_or_email">邮箱账号</string>
    <string name="email">邮箱</string>
    <string name="take_number">提取码：</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login_detail">LoginDetailActivity</string>
    <string name="title_activity_channel_setting">ChannelSetting</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
</resources>