<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/user_icon" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            style="@style/editText"
            android:hint="@string/phone_or_email"
            android:inputType="textEmailAddress" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <include layout="@layout/gray_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/password_icon" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/editText">
        </EditText>
    </LinearLayout>

    
    
    <include layout="@layout/gray_line" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="19dp"
        style="@style/rectBig"
        android:text="@string/login_first"
 />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="?attr/gray_light_text" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="16dp" 
            android:background="@drawable/rect"
            android:text="@string/register"
            android:textColor="?attr/gray_dark_text"
            android:textSize="11sp" />
    </LinearLayout>

</LinearLayout>