<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/login_content"
        style="@style/fill_both_size"
        android:layout_height="wrap_content"
        android:paddingLeft="19dp"
        android:paddingRight="19dp" >

        <RelativeLayout
            android:id="@+id/setting_title_bar"
            android:layout_width="fill_parent"
            android:layout_height="70dp" >

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_title"
                android:textColor="?attr/gray_light_text"
                android:textSize="20dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/setting_rotate_fuction"
            android:layout_below="@+id/setting_title_bar"
            android:orientation="vertical" >

            <include layout="@layout/gray_line" />

            <LinearLayout
                android:id="@+id/login_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/account_avatar"
                    style="@style/auto_size"
                    android:layout_width="77dp"
                    android:layout_height="77dp"
                    android:padding="4.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/user_icon" />

                <TextView
                    android:id="@+id/account_name"
                    style="@style/auto_size"
                    android:layout_marginTop="@dimen/account_name_top"
                    android:drawablePadding="5.0dip"
                    android:text="@string/login_ready"
                    android:textColor="?attr/gray_dark_text"
                    android:textSize="17.0sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/login_switch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_margin="19dp"
                    android:background="@drawable/rect"
                    android:text="@string/login_fast"
                    android:textColor="?attr/gray_light_text"
                    android:textSize="10sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="19dp" >

                    <ImageButton
                        android:id="@+id/weixin_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:padding="25dp"
                        android:visibility="gone"
                        android:src="@drawable/weixin_icon" />

                    <ImageButton
                        android:id="@+id/qq_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:padding="25dp"
                        android:src="@drawable/qq_icon" />
                </LinearLayout>
            </RelativeLayout>

            <include layout="@layout/gray_line" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>